# microhttpd

./: .gitignore  CMakeLists.txt  android.toolchain.cmake
android/: MHD_config.h
darwin/: MHD_config.h
src/include/: microhttpd2.h
src/microhttpd/: daemon.c  mhd_str.h
